# statlab

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: demo.ipynb
src/statlab/: __init__.py  cli.py
src/statlab/backtest/: __init__.py  costs.py  engine.py  events.py  execution.py  pairs.py  portfolio.py  strategy.py
src/statlab/data/: __init__.py  schema.py  sources.py  storage.py  synthetic.py  universe.py  validation.py
src/statlab/report/: __init__.py  tearsheet.py
src/statlab/signals/: __init__.py  cointegration.py  discovery.py  half_life.py  kalman.py  zscore.py
src/statlab/validation/: __init__.py  deflated_sharpe.py  sensitivity.py  walkforward.py
tests/: conftest.py  test_cli.py  test_cointegration.py  test_costs.py  test_deflated_sharpe.py  test_discovery.py  test_engine.py  test_execution.py  test_half_life.py  test_kalman.py  test_no_lookahead.py  test_pairs_strategy.py  test_portfolio.py  test_schema.py  test_sensitivity.py  test_sources.py  test_storage.py  test_synthetic.py  test_tearsheet.py  test_universe.py  test_validation.py  test_walkforward.py  test_zscore.py
