[project]
name = "statlab"
version = "0.1.0"
description = "Statistical-arbitrage research platform & event-driven backtester with research-grade rigor."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "wuyutian4071" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "pyarrow>=16.0",
    "matplotlib>=3.9",
    "jinja2>=3.1",
    "yfinance>=0.2.40",
]

[project.scripts]
statlab = "statlab.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pandas-stubs>=2.2",
    "types-setuptools",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/statlab"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pyflakes / pycodestyle
    "I",              # isort
    "N",              # pep8-naming
    "UP",             # pyupgrade
    "B",              # bugbear
    "C4",             # comprehensions
    "SIM",            # simplify
    "RUF",            # ruff-specific
    "NPY",            # numpy legacy random, etc.
    "PD",             # pandas-vet
]
ignore = [
    "N803", "N806",   # allow math-style variable names (X, Y, beta) in quant code
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "N802"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
disallow_untyped_defs = true
files = ["src", "tests"]
plugins = []

[[tool.mypy.overrides]]
module = ["statsmodels.*", "yfinance.*", "scipy.*", "matplotlib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: marks tests that require network access",
]

[tool.coverage.run]
branch = true
source = ["statlab"]
